--- a/src/style/collapse.scss
+++ b/src/style/collapse.scss
@@ -1,11 +1,12 @@
 .collapse-container {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    width: 82.5%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 82.5%;
   .collapse {
-    position: relative;
+    overflow: hidden;
     .collapse-title {
+      position: relative;
       background-color: #ff6060;
       display: flex;
       flex-direction: row;
@@ -17,43 +18,77 @@
       height: 52px;
       padding: 0 17.5px;
       border-radius: 5px;
-    }
-  }
-}
-  
-  .collapse-title img {
-    transition: transform 0.4s ease;
-  }
-  
-  .collapse.open .collapse-title img {
-    transform: rotate(-180deg);
-  }
-
-  .collapse-text {
-    background: #f6f6f6;
-    font-weight: 400;
-    font-size: 18px;
-    margin: 0;
-  padding: 20px;
-  border-radius: 5px;
-  }
-
-  .hidden {
-    display: none;
-  }
-  
-  @media (max-width: 600px) {
-    .collapse-container {
-      width: 100%;
-      gap: 20px;
-      .collapse {
-        .collapse-title {
-          height: 30px;
-          font-size: 13px;
-        }
-        .collapse-text {
-          font-size: 12px;
-        }
+      z-index: 2;
+      img {
+        transition: transform 0.4s ease;
       }
     }
   }
+  .collapse.open {
+    overflow: hidden;
+    .collapse-title img {
+      transform: rotate(-180deg);
+    }
+  }
+}
+
+
+.collapse-text {
+  background: #f6f6f6;
+  font-weight: 400;
+  font-size: 18px;
+  margin: 0;
+  border-radius: 5px;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0 20px;
+  z-index: 1;
+  position: relative;
+  &.visible {
+    animation: slideDown 0.4s ease;
+    max-height: 150px;
+    padding: 20px;
+    transition: max-height 0.5s ease-in;
+  }
+  &.hidden {
+    animation: slideUp 0.3s linear;
+    transition: max-height 0.3s ease-in;
+  }
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    padding-top: 20px;
+    transform: translateY(0%);
+  }
+  to {
+    transform: translateY(-100%);
+    padding-top: 0;
+  }
+}
+
+
+@media (max-width: 600px) {
+  .collapse-container {
+    width: 100%;
+    gap: 20px;
+    .collapse {
+      .collapse-title {
+        height: 30px;
+        font-size: 13px;
+      }
+      .collapse-text {
+        font-size: 12px;
+      }
+    }
+  }
+}
